...
            android:drawableTop="@drawable/ic_line_grey"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="Explore"
            android:textAllCaps="false"
            android:textColor="@color/colorAppTheme"
            android:textSize="20sp" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/poiVp"
...
